# spine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  MCP.md  README.md  docker-compose.yml
.github/workflows/: release.yml
embed-service/: Dockerfile  main.py  requirements.txt
src/: config.rs  error.rs  main.rs  mcp.rs
src/api/: context.rs  graph.rs  health.rs  http_contracts.rs  mod.rs  protos.rs  queues.rs  search.rs  services.rs  tables.rs
src/db/: queries.rs  schema.rs
src/embed/: client.rs  mod.rs  pipeline.rs  search.rs
src/graph/: mod.rs
src/models/: http_contract.rs  mod.rs  proto.rs  queue.rs  service.rs  table.rs
